# shakeflow

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE2  LICENSE-MIT  README.md  rust-toolchain  rustfmt.toml
shakeflow/: Cargo.toml
shakeflow-bsg/: Cargo.toml
shakeflow-bsg/src/: main.rs
shakeflow-bsg/src/bsg_dataflow/: bsg_1_to_n_tagged.rs  bsg_1_to_n_tagged_fifo.rs  bsg_1_to_n_tagged_fifo_shared.rs  bsg_8b10b_decode_comb.rs  bsg_8b10b_encode_comb.rs  bsg_8b10b_shift_decoder.rs  bsg_channel_tunnel.rs  bsg_channel_tunnel_in.rs  bsg_channel_tunnel_out.rs  bsg_channel_tunnel_wormhole.rs  bsg_compare_and_swap.rs  bsg_credit_to_token.rs  bsg_fifo_1r1w_large.rs  bsg_fifo_1r1w_large_banked.rs  bsg_fifo_1r1w_narrowed.rs  bsg_fifo_1r1w_pseudo_large.rs  bsg_fifo_1r1w_small.rs  bsg_fifo_1r1w_small_credit_on_input.rs  bsg_fifo_1r1w_small_hardened.rs  bsg_fifo_1r1w_small_unhardened.rs  bsg_fifo_1rw_large.rs  bsg_fifo_bypass.rs  bsg_fifo_reorder.rs  bsg_fifo_shift_datapath.rs  bsg_fifo_tracker.rs  bsg_flatten_2d_array.rs  bsg_flow_convert.rs  bsg_flow_counter.rs  bsg_make_2d_array.rs  bsg_one_fifo.rs  bsg_parallel_in_serial_out.rs  bsg_parallel_in_serial_out_dynamic.rs  bsg_parallel_in_serial_out_passthrough.rs  bsg_permute_box.rs  (+19 more)
shakeflow-corundum/: Cargo.toml
shakeflow-corundum/src/: cmac_pad.rs  constants.rs  cpl_op_mux.rs  cpl_queue_manager.rs  cpl_write.rs  desc_fetch.rs  desc_op_mux.rs  event_mux.rs  fetch_queue_manager.rs  ffis.rs  main.rs  queue_manager.rs  rx_checksum.rs  rx_engine.rs  rx_hash.rs  tx_checksum.rs  tx_engine.rs  tx_scheduler_rr.rs
shakeflow-macro/: Cargo.toml
shakeflow-macro/src/: expr_project.rs  interface.rs  lib.rs  signal.rs  utils.rs
shakeflow/src/: codegen.rs  lib.rs  utils.rs
(+412 files in other folders)
