[package]
name = "shakeflow-corundum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shakeflow = { path = "../shakeflow" }
shakeflow-std = { path = "../shakeflow-std" }
static_assertions = "1.1.0"
itertools = "0.10.5"
paste = "1.0.9"
