[package]
name = "shakeflow-macro"
version = "0.1.0"
authors = [] # anonymized for reviews
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.101", features = ["full", "extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.44"
